# cloud-weave

./: .gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: post_threads_from_pr.py
.github/workflows/: ci.yml  threads-post-manual.yml  threads-post.yml
.notes/todo/: tauri-backend-refactor-roadmap.md
LICENSES/: rclone-MIT.txt
docs/: onedrive-troubleshooting.md
docs/development/: feedback-basin-v1.md  feedback-v1.md  react-responsibility-separation.md  tauri-backend-design.md  threads.md  version-bump.md
docs/legal/: THIRD_PARTY_NOTICES.md
scripts/: download-rclone.ps1  run-demo.mjs
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/rclone_logic/: Cargo.toml
src-tauri/crates/rclone_logic/src/: lib.rs  transfer_paths.rs
src-tauri/src/: auth_flow.rs  auth_remotes.rs  auth_session.rs  backend_common.rs  diagnostics.rs  lib.rs  main.rs  rclone_runtime.rs  remotes.rs  transfers.rs  unified_library.rs
src-tauri/src/ipc/: events.rs  types.rs
src-tauri/src/providers/: mod.rs  onedrive.rs
src-tauri/src/transfers/: download.rs  mod.rs  upload.rs
src-tauri/src/unified_library/: load_stream.rs  mod.rs
src/components/modals/: AddStorageModal.tsx  FeedbackPromptModal.tsx  IssuesModal.tsx  OAuthPendingModal.tsx  PreviewModal.tsx  RemoveStorageConfirmModal.tsx  UploadModal.tsx  WorkspaceModals.tsx  (+1 more)
src/lib/: pathUtils.ts
tests/: test_post_threads_from_pr.py
(+73 files in other folders)
